fix: x scrollbar height

--- a/static/styles/base.css
+++ b/static/styles/base.css
@@ -25,6 +25,7 @@ body::before {
 
 ::-webkit-scrollbar {
   width: 0.4rem;
+  height: 0.4rem;
   background-color: var(--oa-yellow-dark-dark);
 }
 
